stock-service/k8s/istio-rules.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: grpc-stock-service-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: grpc
      protocol: GRPC
    hosts:
    - "grpc.stock-service.sdd.com"
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: rest-stock-service-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "rest.stock-service.sdd.com"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: rest-stock-service
spec:
  hosts:
  - "rest.stock-service.sdd.com"
  gateways:
  - rest-stock-service-gateway
  http:
  - route:
    - destination:
        host: stock-service
        port:
          number: 8080
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: grpc-stock-service
spec:
  hosts:
  - "grpc.stock-service.sdd.com"
  gateways:
  - grpc-stock-service-gateway
  http:
  - route:
    - destination:
        host: stock-service
        port:
          number: 9090
